--- a/example.Rmd
+++ b/example.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "First blog"
 author: "Evalyne W Muiruri"
-date: "4 September 2018"
+date: "5 September 2018"
 #output: html_document
 output: 
   md_document:
@@ -12,13 +12,44 @@ output:
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
+## Examples with Tensorflow
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+```{r RTensorflow}
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+library(tensorflow)
 
-```{r cars}
+# Create 100 phony x, y data points, y = x * 0.1 + 0.3
+x_data <- runif(100, min=0, max=1)
+y_data <- x_data * 0.1 + 0.3
+
+# Try to find values for W and b that compute y_data = W * x_data + b
+# (We know that W should be 0.1 and b 0.3, but TensorFlow will
+# figure that out for us.)
+W <- tf$Variable(tf$random_uniform(shape(1L), -1.0, 1.0))
+b <- tf$Variable(tf$zeros(shape(1L)))
+y <- W * x_data + b
+
+# Minimize the mean squared errors.
+loss <- tf$reduce_mean((y - y_data) ^ 2)
+optimizer <- tf$train$GradientDescentOptimizer(0.5)
+train <- optimizer$minimize(loss)
+
+# Launch the graph and initialize the variables.
+sess = tf$Session()
+sess$run(tf$global_variables_initializer())
+
+# Fit the line (Learns best fit is W: 0.1, b: 0.3)
+for (step in 1:201) {
+  sess$run(train)
+  if (step %% 20 == 0)
+    cat(step, "-", sess$run(W), sess$run(b), "\n")
+}
+```
+
+
+## Examples with greta
+
+```{r greta}
 library(greta)
 x <- iris$Petal.Length
 y <- iris$Sepal.Length
@@ -32,18 +63,10 @@ mean <- int + coef * x
 distribution(y) <- normal(mean, sd)
 m <- model(int, coef, sd)
 plot(m)
-draws <- mcmc(m, n_samples = 1000, chains = 3)
+draws <- mcmc(m, n_samples = 1000, chains = 1)
 bayesplot::mcmc_trace(draws)
 ```
 
-## Including Plots
 
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
 
 
