--- a/_posts/leastsquares.rmd
+++ b/_posts/leastsquares.rmd
@@ -2,7 +2,10 @@
 title: "Least Squares model fitting"
 author: "Evalyne W Muiruri"
 date: "5 September 2018"
-output: html_document
+#output: html_document
+output: 
+  md_document:
+    variant: markdown_github
 ---
 
 ```{r setup, include=FALSE}
@@ -29,19 +32,19 @@ genresponse<- function(distances, type){
                   rnorm(length(distances), 4,0.2))
   }
   if(type=="proximity"){
-    #' Could expand model to account for higher spm closer to the windfarm due to current changing direction.
+    #' Could expand model to account for higher values closer to the zero 
     resp <- ifelse(distances >0, 
                   rnorm(length(distances), (4 + 10*exp(-0.05 * distances)), 0.2), 
                   rnorm(length(distances), (4+2*exp(0.1*distances)),0.2))
   }
-  spm
+  resp
 }
 resX <- genresponse(distX, type="flat")
 res <- genresponse(dist, type="flat")
 ```
 
 Plot the data 
-```{r echo=FALSE}
+```{r echo=TRUE}
 plot(distX, resX)
 plot(dist, res)
 ```
@@ -62,8 +65,9 @@ Predict from this model to check it works as expected
 
 ```{r}
 pred <- mymodel(par=c(4,8, 0.03), d=dist)
-plot(dist, spm, col="grey40"); lines(dist, pred, col="blue")
+plot(dist, res, col="grey40"); lines(dist, pred, col="blue")
 ```
+Not great but it will do as a starting point
 
 
 Fit the model using least squares
@@ -75,7 +79,7 @@ lsq <- function(par, spmd, d){
   rss
 }
 
-params <- optim(c(4, 8, 0.04),lsq, spmd=spm, 
+params <- optim(c(4, 8, 0.04),lsq, spmd=res, 
                d=dist)
 params$par
 ```
@@ -84,27 +88,9 @@ Predict from the model using the optimised parameters and plot the final results
 
 ```{r}
 pred2 <- mymodel(par=params$par, d=dist)
-plot(dist, spm, col="grey40"); lines(dist, pred2, col="blue", lwd=2)
+plot(dist, res, col="grey40"); lines(dist, pred2, col="blue", lwd=2)
 ```
 
 
 
-## R Markdown
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
-```
-
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
